# himawari-8-wallpaper

./: .gitignore  README.md  android_env.sh  himawari-8-wallpaper
android/h8w-android/: build.gradle  h8w.jks
android/h8w-android/app/: build.gradle  proguard-rules.pro
android/h8w-android/app/src/androidTest/java/com/test/sdl/sdl2test/: ExampleInstrumentedTest.java
android/h8w-android/app/src/main/: AndroidManifest.xml
android/h8w-android/app/src/main/java/io/github/planet0104/h8w/: MainActivity.java  MyApplication.java  PrefHelper.java  WallpaperService.java
android/h8w-android/app/src/main/res/layout/: activity_main.xml
android/h8w-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/h8w-android/app/src/main/res/xml/: file_provider.xml
android/h8w-android/app/src/test/java/com/test/sdl/sdl2test/: ExampleUnitTest.java
android/h8w-android/gradle/wrapper/: gradle-wrapper.properties
android/lib-wallpaper/: Cargo.toml  build.cmd  build.sh  build.txt  buildx86.sh  openssl_notes.txt  release.cmd
android/lib-wallpaper/.cargo/: config
android/lib-wallpaper/src/: himawari8.rs  lib.rs  wallpaper.rs
android/lib-wallpaper/tmp/: build-openssl-libraries.sh
desktop/: Cargo.toml  README.md  build.rs  main.html
desktop/src/: himawari8.rs  main.rs  wallpaper.rs  windows.rs
