[package]
name = "himawari-8-wallpaper"
version = "1.0.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
reqwest = "*"
png = "*"
chrono = "0.4.6"
wallpaper = "*"
lazy_static = "*"
rust-ini = "*"
image = "*"

[target.'cfg(not(windows))'.dependencies]
clap = "2.32.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }
thread-id = "3.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
image = "*"

[package.metadata.winres]
OriginalFilename = "himawari-8-wallpaper.exe"
LegalCopyright = "Copyright 2019 JiaYe"

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'