[package]
name = "wallpaper"
version = "1.0.0"
authors = ["JiaYe"]
edition = "2018"

[dependencies]
log = "0.4.6"
lazy_static = "1.3.0"
jni = { version = "*", default-features = false }
android_logger = "0.8.3"
android_support = "0.1.0"

chrono = "0.4.6"
image = "0.21.1"
png = "0.14.1"
reqwest = { version = "0.9.10", default-features = false, features = ["rustls-tls"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'